added link to github page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
 <footer>
-  sstiehl
+  <a href="http://stiehl.io">stiehl.io</a> | <a href="https://github.com/5oc/HARVisualizer">github</a>
 </footer>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
